CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar(255) NOT NULL,
  "team" varchar(255),
  "created_at" datetime NOT NULL DEFAULT (now()),
  "updated_at" datetime NOT NULL DEFAULT (now()),
  "user_id" integer
);

CREATE TABLE "tasks" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "customer" varchar(225) NOT NULL,
  "performer" varchar(225),
  "due_date" datetime NOT NULL,
  "completion_date" datetime NOT NULL,
  "created_at" datetime NOT NULL DEFAULT (now()),
  "updated_at" datetime NOT NULL DEFAULT (now())
);

CREATE TABLE "subjects" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL,
  "time_start" timestamp NOT NULL,
  "time_end" timestamp NOT NULL
);

CREATE TABLE "instituts" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL
);

CREATE TABLE "performers" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar NOT NULL
);

CREATE TABLE "performer_tasks" (
  "performer_id" integer NOT NULL,
  "task_id" integer NOT NULL,
  PRIMARY KEY ("performer_id", "task_id")
);

CREATE TABLE "user_instituts" (
  "user_id" integer NOT NULL,
  "institute_id" integer NOT NULL,
  PRIMARY KEY ("user_id", "institute_id")
);

CREATE TABLE "user_subjects" (
  "user_id" integer NOT NULL,
  "subject_id" integer NOT NULL,
  PRIMARY KEY ("user_id", "subject_id")
);

ALTER TABLE "tasks" ADD FOREIGN KEY ("id") REFERENCES "users" ("user_id");

CREATE TABLE "performers_performer_tasks" (
  "performers_id" integer,
  "performer_tasks_performer_id" integer,
  PRIMARY KEY ("performers_id", "performer_tasks_performer_id")
);

ALTER TABLE "performers_performer_tasks" ADD FOREIGN KEY ("performers_id") REFERENCES "performers" ("id");

ALTER TABLE "performers_performer_tasks" ADD FOREIGN KEY ("performer_tasks_performer_id") REFERENCES "performer_tasks" ("performer_id");


ALTER TABLE "performer_tasks" ADD FOREIGN KEY ("task_id") REFERENCES "tasks" ("id");

ALTER TABLE "user_instituts" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "user_instituts" ADD FOREIGN KEY ("institute_id") REFERENCES "instituts" ("id");

ALTER TABLE "user_subjects" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "user_subjects" ADD FOREIGN KEY ("subject_id") REFERENCES "subjects" ("id");


CREATE TABLE "admin" (  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,   "name" varchar(255) NOT NULL,   "created_at" datetime NOT NULL DEFAULT (now()),  "updated_at" datetime NOT NULL DEFAULT (now()),);